--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
+    "fs": "0.0.1-security",
     "method-override": "^3.0.0"
   }
 }
