--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs": "0.0.1-security",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
