--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment-timezone": "^0.5.34",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
 }
