--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^6.0.2",
     "express-mysql-session": "^2.1.7",
     "fs": "0.0.1-security",
+    "helmet": "^5.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
