fix nodemailer mdp

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=3001
 DB_HOST="localhost"
 DB_PORT="3306"
-DB_USER="lucas"
-DB_PASS="rfn2K22$"
+DB_USER="root"
+DB_PASS="johan72nn"
 DB_NAME="site_db"
-MDP_MAIL="nygaurafifoyzxpt"
+MDP_MAIL="cxhritjmagbmhwsb"
 MAIL="testgrainesdecitoyen@gmail.com"
